syntax = "proto3";

package pubs;
option go_package=".;pubs";

// 报告Nat信息
message ReportNatClient {
    string BattleSpaceID = 1;   // 对战空间ID
    string VerifiyCode = 2;    // 房间验证码
}
